AM_CFLAGS=-Wall -W -std=c99

SUBDIRS		= include

bin_PROGRAMS	= shell-fm

INCLUDES = -I$(srcdir)/include

shell_fm_SOURCES = \
autoban.c \
bookmark.c \
getln.c \
hash.c \
http.c \
interface.c \
main.c \
play.c \
radio.c \
completion.c \
ropen.c \
sckif.c \
service.c \
settings.c \
split.c \
strary.c \
tag.c \
pipe.c \
md5.c \
history.c \
playlist.c \
submit.c \
readline.c \
feeds.c \
xmlrpc.c


## vim: noet ts=8 sw=8
