
noinst_HEADERS = \
autoban.h \
bookmark.h \
compatibility.h \
completion.h \
getln.h \
globals.h \
hash.h \
history.h \
http.h \
interface.h \
md5.h \
pipe.h \
play.h \
playlist.h \
radio.h \
ropen.h \
sckif.h \
service.h \
settings.h \
split.h \
strarray.h \
submit.h \
tag.h

## vim: noet ts=8 sw=8
